Updated blindside text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="A group of Unreal Engine veterans making cool games about sharks n stuff.">
+<meta name="description" content="Gritty, visceral, heart-pounding action games are our calling. Currently working on Maneater, a single-player action RPG where you play the role as a shark.  Previously worked on Depth and Killing Floor. ">
 <title>Blindside Interactive</title>
 <link rel="stylesheet" href="bulma.css">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -48,10 +48,10 @@ html {
 				<img src="blindside.svg" style="width: 70%; max-width: 800px; max-height: 50vh;">
 				<br><br>
 				<h1 class="title is-3" style="color: #fff;">
-					a group of Unreal Engine veterans
+					gritty, visceral, heart-pounding action games are our calling 
 				</h1>
 				<h2 class="subtitle is-5" style="font-style: italic;">
-					<a href="https://maneatergame.com" target="_blank">making cool games about sharks n stuff</a>
+					<a href="https://maneatergame.com" target="_blank">currently working on Maneater, a single-player action RPG</a>
 				</h2>
 			</div>
 		</div>
@@ -123,6 +123,14 @@ html {
 		},
 		"retina_detect": true
 	});
+
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	
+	ga('create', 'UA-103479328-1', 'auto');
+	ga('send', 'pageview');
 	</script>
 </body>
 </html>
